<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gradugation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Activities -->
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_choose_character">ChooseCharacterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_how_to_play">HowToPlayActivity</string>
    <string name="title_activity_minigames">MinigamesActivity</string>
    <string name="title_activity_bench_press_minigame">BenchPressMinigame</string>
    <string name="title_activity_wires_mini_game">WiresMiniGame</string>
    <string name="title_activity_waitinline_minigame">WaitInLineMinigame</string>
    <string name="title_activity_find_the_mac_minigame">FindTheMacMinigame</string>
    <string name="title_activity_game_over_screen">GameOverScreen</string>
    <string name="title_activity_math_mini_game">MathMiniGame</string>
    <string name="game_over_text">Game Over Screen</string>

    <!-- Main Activity -->
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="how_to_play">How To Play</string>
    <string name="settings">Settings</string>
    <string name="minigames">Minigames</string>
    <string name="how_many_players">How Many Players?</string>
    <string name="music_on">Music</string>
    <string name="okay">Okay</string>
    <string name="back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="volume">Volume</string>

    <!-- New Game -->
    <string-array name="number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item> 
    </string-array>
   
    <!-- Choose Character -->
    <string name="choose_character">Choose a Character</string>
    <string name="character_engineer">Engineer</string>
    <string name="character_athlete">Athlete</string>
    <string name="character_gradugator">Gradugator</string>
    <string name="character_med_student">PreMed</string>
    
    <string name="attributes_athlete">The athlete gets a credit bonus at the Stadium for the Bench Press Minigame</string>
    <string name="attributes_engineer">The engineer gets a credit bonus at the Physics Building for the Wires Minigame</string>
    <string name="attributes_gradugator">Gradugator gets a credit bonus in Turlington for the Whack-A-Flyer Minigame</string>
    <string name="attributes_med_student">The PreMed student avoids getting sick on random events</string>
    
    <string name="name_hint">Enter you name here</string>
    
    <!-- MainGameScreen -->
    <string name="ready_to_graduate">Player %1$s has earned %2$d credits! You are ready to graduate.
        Please head to the O\'Connell Center!</string>
  
    <!-- Minigames Screen -->
    <string name="wires">Wires</string>
    <string name="bench_press">Bench Press</string>
    <string name="whack_aflyer">Whack-A-Flyer</string>
    <string name="wait_in_line">Wait In Line</string>
    <string name="find_the_mac">Find The Mac</string>
    <string name="title_activity_continue">MainActivity</string>
    <string name="saved_game">Load Saved Game</string>
    <string name="saved_game1">saved game1</string>
    <string name="saved_game2">saved game2</string>
    <string name="math">Mathematics</string>

    <!-- Bench Press Minigame -->
    <string name="bench_press_instructions1">Tap the screen as fast as possible to make your character do reps.</string>
    <string name="bench_press_instructions2">You need to finish %1$d reps in 10 seconds to earn the credits for 
        this minigame.</string>
    <string name="bench_press_time">Time Left: 10 secs</string>
    <string name="bench_press_reps">Reps: 0</string>
    <string name="bench_press_success">Congratulations! You finished %1$d reps in 10 seconds.
        You have earned %2$d credits!</string>
    <string name="bench_press_failure">Sorry! You only finished %1$d reps in 10 seconds.
        You did not earn any credits!</string>
    <string name="title_activity_main_game_screen">MainGameScreen</string>

    <!-- How To Play / Tutorial Screen -->
    <string name="how_to_play_title">How To Play Gradugation</string>
    <string name="main_game_instructions">The main goal of Gradugation is to graduate, of course! 
	    Begin the game by selecting a preferred character. Afterwards, you will see the main game board.
	    After a dice roll determines your turn, you may begin on the path to graduation. The number that
	    the dice rolls determines the number of squares your character may move. Use your finger to 
	    drag your character across the screen. If your character visits a building, he or she can take courses
	    in the form of minigames to accumulate credits.</string>
    <string name="mini_game_title">Mini Game Instructions</string>
    <string name="wires_title">1. Wires</string>
    <string name="wires_body">The purpose of this game is to find the end of a wire, the number of which is specified
	    by the dialogue box at the beginning of the wires game. The time allotted to to the player is not very long,
	    so be quick!</string>
    <string name="bench_press_title">2. Bench Press</string>
    <string name="bench_press_body">Quickly tap the screen, right onto the dapper, weight-lifting athlete on the screen
	    to perform as many reps as possible in the allotted time.</string>
	<string name="whack_aflyer_title">3. Whack-A-Flyer</string>
    <string name="whack_aflyer_body">Whack as many flyers as you can to get through Turlington Plaza. Whack the flyers by tapping on them.</string> 
    <string name="color_title">4. Color</string>
    <string name="color_body">For every word on the screen, select the color that matches the color of the text.</string>  
    <string name="wait_in_line_title">5. Wait in Line</string>
    <string name="wait_in_line_body">Make it through the hub in 16 seconds to get to class. Watch out for other students. If you hit them, you won\'t make it to class! Touch the screen to stop your character from moving.</string>
    <string name="food_title">6. Junk Food Ninja</string>
    <string name="food_body">Click on the apples to get 5 points in 15 seconds. Lose points if you click on fries. </string>  
	<string name="money_title">7. Counting Money</string>
    <string name="money_body">Keep track of the amount of money that passes by the screen and then enter that amount into the dialog box at the end. </string>  
	<string name="library_title">8. Library West</string>
    <string name="library_body">This game will test your memory to the extreme! Remember how many books, coffee mugs, and friends appear on screen. You will be asked to type in how many you saw when time is up! </string>  
	<string name="balance_title">9. Balance Game</string>
    <string name="balance_body">You have 7 tries to guess how much weight is on the scale. After each guess, you will be notified if the correct weight is greater than or less than your guess.</string>  
	<string name="find_the_mac_title">10. Find The Mac</string>
	<string name="find_the_mac_body">Look for the pair of Macs among the PCs. You will have one second to spot them. Click on the matching pair of Macs to win. You have three tries.</string>
	
    <!-- Wait in Line Minigame -->
    <string name="wait_in_line_instructions">You have 16 seconds to make it through the Hub to get to class! 
        Touch the screen to stop your character from moving. Watch out for other students! 
        If you hit them, you won\'t make it to class!</string>
    <string name="wait_in_line_success">Congradugation! You made it through the Hub in time to earn %1$d credits!</string>
    <string name="wait_in_line_failure_time">Oh no! You didn\'t make it through the Hub in time to earn credits!</string>
    <string name="wait_in_line_failure_hit">Oh no! You hit someone and didn\'t make it to class in time!</string>

	    
    <!-- Whack A Flyer Minigame -->
    <string name="title_activity_whack_aflyer">WhackAFlyerGame</string>
    <string name="whack_aflyer_success">Congradugations! You whacked %1$d flyers.
        You have earned %2$d credits!</string>
    <string name="whack_aflyer_failure">Sorry! You only whacked %1$d flyers.
        You did not earn any credits!</string>
    <string name="whack_aflyer_instructions">Oh no! It\'s noon in turlington plaza, and people are handing out flyers!
        In order to get through turlington plaza, you need to whack %1$d flyers!
        Whack them by tapping on them. Good luck!</string>

    
    <!-- Color MiniGame -->
    <string name="title_activity_color_mini_game">ColorMiniGame</string>
    <string name="color_game_blue">Blue</string>
    <string name="color_game_orange">Orange</string>
    <string name="color_game_yellow">Yellow</string>
    <string name="color_game_green">Green</string>
    <string name="color_game_red">Red</string>
    <string name="color_game_black">Black</string>
    <string name="color_game">Color Game</string>
    <string name="color_game_purple">Purple</string>
    <string name="color_game_pink">Pink</string>
    <string name="color_mini_game_success">Congradugations! You answered %1$d out of %2$d correctly.
        You have earned %3$d credits!</string>
    <string name="color_mini_game_failure">Sorry! You only answered %1$d out of %2$d correctly.
        You did not earn any credits!</string>
    <string name="color_mini_game_instructions">You\'re part of a psychological experiment to see
        if you\'re smarter than the average chimpanzee. For every word on the screen, select
        the color that matches the color of the text. You need to get more than %1$d%% correct. 
        Good luck!</string>
        
    <!-- Math Minigame -->
    <string name="math">MathMiniGame</string>
    
    
    <!-- Food Minigame -->
    <string name="title_activity_food_mini_game">FoodMiniGame</string>
    <string name="food_mini_game">Junk Food Ninja</string>
	
	<!-- Find the Mac Minigame -->
    <string-array name="type">
        <item>New Game</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    
    <string name="moneyCount">Money Count</string>
    <string name="LibraryBombardment">Library Bombardment</string>
    <string name="BalancingMiniGame">Balancing Mini Game</string>

    <!-- Math Minigame -->
    <string name="check_solution">Done</string>
    <string name="start">Press to Start</string>
    <string name="square_size">150dp</string>
    
</resources>
