<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ColorMiniGame" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="124dp"
        android:layout_marginLeft="32dp" >

        <RadioButton
            android:id="@+id/black_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:l
            android:checked="false"
            android:text="@string/color_game_black"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/blue_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_game_blue"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/green_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_game_green"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_game_purple"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_game_yellow"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_game_orange"
            android:textColor="@android:color/black" />

    </RadioGroup>

</RelativeLayout>
