<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2040B8"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/gradugation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#E67022"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/gradugation_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradugation_text"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/gradugation_logo" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradugation_logo"
        android:layout_marginBottom="10dp"
        android:text="@string/new_game"
        android:textColor="#FAFAFA"
        android:textSize="16sp" 
        android:onClick="newGameButtonClick"/>

    <Button
        android:id="@+id/btn_continue_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_new_game"
        android:layout_marginBottom="10dp"
        android:text="@string/continue_game"
        android:textColor="#FAFAFA"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_how_to_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_continue_game"
        android:layout_marginBottom="10dp"
        android:text="@string/how_to_play"
        android:textColor="#FAFAFA"
        android:textSize="16sp" />

</RelativeLayout>