<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gator_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/how_many_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/how_many_players"
        android:textColor="@color/gator_orange"
        android:textSize="@dimen/header_text_size" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:layout_below="@id/how_many_player_text"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_orange"
            android:minHeight="55dp"
            android:onClick="btnBackClicked"
            android:padding="14dp"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btn_continue_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_orange"
            android:minHeight="55dp"
            android:onClick="chooseCharacter"
            android:padding="14dp"
            android:text="@string/continue_game"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>