<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gator_blue" >

        <TextView
            android:id="@+id/bench_press_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/bench_press_time"
            android:textColor="@color/gator_orange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bench_press_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/bench_press_reps"
            android:textColor="@color/gator_orange"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="#80666666" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/bench_press_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@id/header"
        android:background="#FFFFFF"
        android:contentDescription="@string/bench_press_reps"
        android:onClick="benchPress"
        android:scaleType="fitCenter"
        android:src="@drawable/bench_press1" />

    <RelativeLayout
        android:id="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gator_blue" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:background="#80666666" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/continue_game"
            android:onClick="ContinueGame" />
    </RelativeLayout>

</RelativeLayout>
